agregando titulo ValleyTech

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="logo">
       <img src="Logo.PNG" alt="Logo JohnTech-Loma" width="120" height="80">
-      <span class="brand">JohnTech-Loma</span>
+      <span class="brand">ValleyTech</span>
     </div>
     <nav class="menu">
       <button class="menu-toggle" aria-label="Abrir menú">&#9776;</button>
