--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <img src="Logo.PNG" alt="Logo JohnTech-Loma" width="120" height="80">
+      <img src="logo-valleyTech.jpg" alt="Logo ValleyTech" width="400" height="500">
       <span class="brand">ValleyTech</span>
     </div>
     <nav class="menu">
@@ -29,7 +29,7 @@
         <span class="subtitle">Innovación y tecnología para tu negocio</span>
       </h1>
       <p>Desarrollamos soluciones digitales, bots y herramientas para empresas modernas.</p>
-      <button class="cta" onclick="scrollToSection('servicios')">Descubre más</button>
+      <a href="#servicios" class="cta-btn">Descubre más</a>
     </div>
     <div class="hero-image">
       <img src="images/Fondo_Pro_PCs.PNG" alt="Tecnología de vanguardia">
@@ -95,7 +95,7 @@
   </section>
   <footer class="footer">
     <div>
-      <p>© 2025 JohnTech-Loma. Innovación digital para tu negocio.</p>
+      <p>© 2026 ValleyTech. Innovación digital para tu negocio.</p>
       <p>
         <a href="./terminos_and_condiciones.html" target="_blank">Términos y condiciones</a> |
         <a href="./politicas_privacidad.html" target="_blank">Política de privacidad</a>
