--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <img src="logo-valleyTech.jpg" alt="Logo ValleyTech" width="150" height="200">
+      <img src="logo-valleyTech.jpg" alt="Logo ValleyTech" class="logo-img">
       <span class="brand">ValleyTech</span>
     </div>
     <nav class="menu">
